change /reports response structure and added cors
