# docs/swagger.yaml
@@ -34,6 +34,17 @@ definitions:
     - status
     - timestamp
     type: object
+  github_com_spanwalla_docker-monitoring-backend_internal_service.ReportOutput:
+    properties:
+      content:
+        $ref: '#/definitions/pgtype.JSONB'
+      created_at:
+        type: string
+      id:
+        type: integer
+      pinger_name:
+        type: string
+    type: object
   internal_controller_http_v1.loginInput:
     properties:
       name:
@@ -60,8 +71,6 @@ definitions:
     - name
     - password
     type: object
-  internal_controller_http_v1.reportRoutes:
-    type: object
   internal_controller_http_v1.storeReportInput:
     properties:
       report:
@@ -71,6 +80,25 @@ definitions:
     required:
     - report
     type: object
+  pgtype.JSONB:
+    properties:
+      bytes:
+        items:
+          type: integer
+        type: array
+      status:
+        $ref: '#/definitions/pgtype.Status'
+    type: object
+  pgtype.Status:
+    enum:
+    - 0
+    - 1
+    - 2
+    type: integer
+    x-enum-varnames:
+    - Undefined
+    - "Null"
+    - Present
 host: localhost:8080
 info:
   contact: {}
@@ -151,7 +179,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/internal_controller_http_v1.reportRoutes'
+            items:
+              $ref: '#/definitions/github_com_spanwalla_docker-monitoring-backend_internal_service.ReportOutput'
+            type: array
         "400":
           description: Bad Request
           schema:
